sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i <- 1 to getNombreValeurs()-1) {
    var v = i
    for (j <- 0 to i-1) {
      if (i-j > v) {
        i=i-j
      }
      i-i+1=v
    }
  }
}